Subjects, Types and Materials module, Email verification and Forgot Pass

--- a/public/app/components/notice/list.html
+++ b/public/app/components/notice/list.html
@@ -1,38 +1,28 @@
 <div class="container">
 
-    <h1>Notice</h1>
-
-    <div class="row container">
+    <h1>
+        Notice 
         <a ui-sref="noticeCreate" class="btn btn-default pull-right">
             <span class="glyphicon glyphicon-plus"></span>
             Add
         </a>
+    </h1>
+
+    <div ng-repeat="notice in notices">
+        <div class="card card-material no-icon">
+            <h3><a ui-sref="noticeDetails({ noticeId:notice.id })">{{ notice.title }}</a></h3>
+            <p>{{ notice.details + '..' }}</p>
+            <br/>
+            <p>
+                <span class="glyphicon glyphicon-time"></span> {{ notice.created_at | utcToLocal:'DD MMM, YYYY (hh:mm a)' }}
+            </p>
+            <p>
+                <span class="glyphicon glyphicon-user"></span> {{ notice.postedBy.username }} ({{ notice.postedBy.email }})
+            </p>
+        </div>
     </div>
-
-    <div class="table-responsive">
-        <table class="table table-hover table-stripped">
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Details</th>
-                    <th>Posted By</th>
-                    <th>Date time</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="notice in notices">
-                    <td>{{ notice.title }}</td>
-                    <td>{{ notice.details + '..' }}</td>
-                    <td>{{ notice.postedBy.username }}</td>
-                    <td>{{ notice.created_at | utcToLocal:'DD MMM, YYYY (hh:mm a)' }}</td>
-                </tr>
-
-                <!-- date:'DD MMM, YYYY (hh:mm a)' -->
-                <!-- <td>{{ notice.created_at | dateWithoutZone | date:'dd MMM, yyyy (hh:mm a)' }}</td> -->
-            </tbody>
-        </table>
-    </div>
-
+    
+    
     <div class="text-center">
         <ul class="pagination">
             <li ng-repeat="n in [].constructor(totalPages + 1) track by $index" 
