--- a/public/app/components/home/home.html
+++ b/public/app/components/home/home.html
@@ -1,7 +1,34 @@
 <div class="container">
-    <h2>Home</h2>
 
-    <p>This is the Home page</p>
+    <div class="row">
 
-    {{ message }}
+        <div class="col-sm-4">
+            <div class="card card-material no-icon">
+                <div>
+                    <img src="/assets/images/notification.png" class="img-responsive center-block" style="width:70%">
+                </div>
+                <h3 class="text-center"><a ui-sref="notice">Notice</a></h3>
+            </div>
+        </div>
+
+        <div class="col-sm-4">
+            <div class="card card-material no-icon">
+                <div>
+                    <img src="/assets/images/subjects.png" class="img-responsive center-block" style="width:70%">
+                </div>
+                <h3 class="text-center"><a ui-sref="subject">Subjects</a></h3>
+            </div>
+        </div>
+
+        <div class="col-sm-4">
+            <div class="card card-material no-icon">
+                <div>
+                    <img src="/assets/images/types.png" class="img-responsive center-block" style="width:70%">
+                </div>
+                <h3 class="text-center"><a ui-sref="materialType">Material Types</a></h3>
+            </div>
+        </div>
+
+    </div>
+
 </div>
