--- a/public/assets/css/card-material-style.css
+++ b/public/assets/css/card-material-style.css
@@ -27,6 +27,10 @@
     font-weight: 600;
 }
 
+.card-material h3 > img {
+    width: 50px;
+}
+
 .card-material > img{
     position: absolute;
     top: 20px;
