--- a/public/app/components/home/home.html
+++ b/public/app/components/home/home.html
@@ -2,33 +2,49 @@
 
     <div class="row">
 
-        <div class="col-sm-4">
-            <div class="card card-material no-icon">
-                <div>
-                    <img src="/assets/images/notification.png" class="img-responsive center-block" style="width:70%">
+        <div class="col-sm-4 col-md-3">
+            <a ui-sref="notice" class="no-decoration">
+                <div class="card card-material no-icon">
+                    <div>
+                        <img src="/assets/images/notification.png" class="img-responsive center-block" style="width:70%">
+                    </div>
+                    <h3 class="text-center">Notice</h3>
                 </div>
-                <h3 class="text-center"><a ui-sref="notice">Notice</a></h3>
-            </div>
+            </a>
         </div>
 
-        <div class="col-sm-4">
-            <div class="card card-material no-icon">
-                <div>
-                    <img src="/assets/images/subjects.png" class="img-responsive center-block" style="width:70%">
+        <div class="col-sm-4 col-md-3">
+            <a ui-sref="subject" class="no-decoration">
+                <div class="card card-material no-icon">
+                    <div>
+                        <img src="/assets/images/subjects.png" class="img-responsive center-block" style="width:70%">
+                    </div>
+                    <h3 class="text-center">Subjects</h3>
                 </div>
-                <h3 class="text-center"><a ui-sref="subject">Subjects</a></h3>
-            </div>
+            </a>
         </div>
 
-        <div class="col-sm-4">
-            <div class="card card-material no-icon">
-                <div>
-                    <img src="/assets/images/types.png" class="img-responsive center-block" style="width:70%">
+        <div class="col-sm-4 col-md-3">
+            <a ui-sref="materialType" class="no-decoration">
+                <div class="card card-material no-icon">
+                    <div>
+                        <img src="/assets/images/types.png" class="img-responsive center-block" style="width:70%">
+                    </div>
+                    <h3 class="text-center">Material Types</h3>
                 </div>
-                <h3 class="text-center"><a ui-sref="materialType">Material Types</a></h3>
-            </div>
+            </a>
         </div>
 
+        <div class="col-sm-4 col-md-3">
+            <a ui-sref="package" class="no-decoration">
+            <div class="card card-material no-icon">
+                <div>
+                    <img src="/assets/images/bundle.png" class="img-responsive center-block" style="width:70%">
+                </div>
+                <h3 class="text-center">Packages</h3>
+            </div>
+            </a>
+        </div>
     </div>
 
 </div>
