--- a/public/app/components/material/create.html
+++ b/public/app/components/material/create.html
@@ -40,6 +40,18 @@
                     <textarea class="form-control" id="details" name="details" placeholder="Material details here.." rows="5" ng-model="material.details"></textarea>
                 </div>
 
+                <div class="checkbox">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div style="margin-top:5px;" class="pull-left"><strong>Premium</strong></div>
+                            <label class="switch pull-right">
+                                <input type="checkbox" id="isPremium" name="isPremium" ng-model="material.isPremium" checked>
+                                <span class="slider round"></span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <label for="type">Type:</label>
                     <select id="type" name="type" class="form-control" ng-model="material.typeId" required>
