--- a/public/app/components/material/list.html
+++ b/public/app/components/material/list.html
@@ -31,14 +31,23 @@
     <div class="row" ng-repeat="counter in [].constructor(Math.ceil(materials.length / 3)) track by $index">
         
         <div class="col-md-4" ng-repeat="material in materials | limitTo:3:($index+1)*3-3">
+            <a ui-sref="materialDetails({ id:material.id })" class="no-decoration">
             <div class="card card-material" style="background-image: url({{ CONSTANTS.BASE_URL + material.type.logoPath }})">
-                <h3><a ui-sref="materialDetails({ id:material.id })">{{ material.title }}</a></h3>
+                <h3>
+                    {{ material.title }}
+                    <img ng-if="material.isPremium" src="/assets/images/premium.png" title="Premium">
+                </h3>
                 <p>{{ material.subtitle }}</p>
 
                 <p>
                     <span class="glyphicon glyphicon-time"></span> {{ material.created_at | utcToLocal:'DD MMM, YYYY (hh:mm a)' }}
                 </p>
+
+                <p>
+                    <a ui-sref="materialEdit({ id:material.id })" class="btn btn-sm btn-default text-green"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+                </p>
             </div>
+            </a>
         </div>
         
     </div>
