--- a/public/assets/css/box-style.css
+++ b/public/assets/css/box-style.css
@@ -35,6 +35,9 @@
 .info h4 {
     font-size: 26px;
 }
+.info h4 > img {
+    width: 50px;
+}
 .info > p {
     color: #717171;
     font-size: 16px;
